src/base.v4
# Generated by iptables-save v1.6.2 on Fri Aug  9 13:58:56 2019
*filter
:INPUT DROP [1761:441692]
:FORWARD DROP [0:0]
:OUTPUT DROP [1968:206298]
-A INPUT -i wlan0 -p tcp -m tcp --dport 443 -m state --state NEW -m recent --update --seconds 60 --hitcount 8 --rttl --name DEFAULT --mask 255.255.255.255 --rsource -j LOG --log-prefix "FW_DROPPED: "
-A INPUT -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 64.50.233.100/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 208.80.154.15/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 64.50.236.52/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 208.80.154.15/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 64.50.236.52/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 64.50.233.100/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 208.80.154.15/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -s 64.50.236.52/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -s 64.50.233.100/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -s 149.20.4.14/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.31.0.63/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.101.240.215/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.61.240.73/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.101.240.215/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.61.240.73/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 149.20.4.14/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.31.0.63/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.61.240.73/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -s 149.20.4.14/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -s 128.31.0.63/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -s 128.101.240.215/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -s 128.61.240.89/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.61.240.89/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 128.61.240.89/32 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p udp -m multiport --sports 5959:5979 -j ACCEPT
-A INPUT -p udp -m multiport --dports 20000:40000 -j ACCEPT
-A INPUT -s 52.217.32.92/32 -j ACCEPT
-A INPUT -s 52.217.32.92/32 -j ACCEPT
-A INPUT -s 52.216.144.219/32 -j ACCEPT
-A INPUT -s 52.216.97.91/32 -j ACCEPT
-A INPUT -s 52.216.92.227/32 -j ACCEPT
-A INPUT -s 52.216.136.164/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m iprange --src-range 52.216.0.0-52.216.255.255 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -m iprange --src-range 52.216.0.0-52.216.255.255 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m iprange --src-range 52.219.0.0-52.219.255.255 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -m iprange --src-range 52.219.0.0-52.219.255.255 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m iprange --src-range 54.231.0.0-54.231.255.255 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -m iprange --src-range 54.231.0.0-54.231.255.255 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m iprange --src-range 3.5.0.0-3.5.255.255 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -m iprange --src-range 3.5.0.0-3.5.255.255 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m iprange --src-range 52.92.0.0-52.92.255.255 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -m iprange --src-range 52.92.0.0-52.92.255.255 -j ACCEPT
-A INPUT -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 123 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --dport 443 -m state --state NEW -m recent --update --seconds 60 --hitcount 8 --rttl --name DEFAULT --mask 255.255.255.255 --rsource -j LOG --log-prefix "FW_DROPPED: "
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 64.50.236.52/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 208.80.154.15/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 64.50.233.100/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 64.50.236.52/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 64.50.233.100/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 208.80.154.15/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 64.50.233.100/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 208.80.154.15/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 64.50.236.52/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 64.50.236.52/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 64.50.233.100/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 208.80.154.15/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.73/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.101.240.215/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.31.0.63/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 149.20.4.14/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.73/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 149.20.4.14/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.31.0.63/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.101.240.215/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.31.0.63/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.101.240.215/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.73/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 149.20.4.14/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 149.20.4.14/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.31.0.63/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.101.240.215/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.73/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.89/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.89/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.89/32 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 128.61.240.89/32 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m multiport --sports 20000:40000 -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 5959:5979 -j ACCEPT
-A OUTPUT -d 52.217.32.92/32 -j ACCEPT
-A OUTPUT -d 52.217.32.92/32 -j ACCEPT
-A OUTPUT -d 52.216.144.219/32 -j ACCEPT
-A OUTPUT -d 52.216.97.91/32 -j ACCEPT
-A OUTPUT -d 52.216.92.227/32 -j ACCEPT
-A OUTPUT -d 52.216.136.164/32 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m iprange --dst-range 52.216.0.0-52.216.255.255 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -m iprange --dst-range 52.216.0.0-52.216.255.255 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m iprange --dst-range 52.219.0.0-52.219.255.255 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -m iprange --dst-range 52.219.0.0-52.219.255.255 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m iprange --dst-range 54.231.0.0-54.231.255.255 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -m iprange --dst-range 54.231.0.0-54.231.255.255 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m iprange --dst-range 3.5.0.0-3.5.255.255 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -m iprange --dst-range 3.5.0.0-3.5.255.255 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m iprange --dst-range 52.92.0.0-52.92.255.255 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -m iprange --dst-range 52.92.0.0-52.92.255.255 -j ACCEPT
-A OUTPUT -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -m iprange --src-range 52.0.0.0-52.0.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.0.0.0-52.0.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 18.206.0.0-18.206.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 18.206.0.0-18.206.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 18.204.0.0-18.204.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 18.204.0.0-18.204.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 18.184.0.0-18.184.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 18.184.0.0-18.184.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 18.195.0.0-18.195.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 18.195.0.0-18.195.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 34.217.0.0-34.217.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 34.217.0.0-34.217.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 34.213.0.0-34.213.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 34.213.0.0-34.213.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 34.221.0.0-34.221.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 34.221.0.0-34.221.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 35.162.0.0-35.162.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 35.162.0.0-35.162.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.52.0.0-52.52.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.52.0.0-52.52.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.88.0.0-52.88.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.88.0.0-52.88.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.23.0.0-52.23.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.23.0.0-52.23.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.9.0.0-52.9.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.9.0.0-52.9.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.53.0.0-52.53.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.53.0.0-52.53.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.43.0.0-52.43.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.43.0.0-52.43.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 54.71.0.0-54.71.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 54.71.0.0-54.71.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 54.212.0.0-54.212.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 54.212.0.0-54.212.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 54.144.0.0-54.144.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 54.144.0.0-54.144.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 69.64.0.0-69.64.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 69.64.0.0-69.64.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 213.239.0.0-213.239.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 213.239.0.0-213.239.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 3.88.0.0-3.88.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 3.88.0.0-3.88.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 34.221.0.0-34.221.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 34.221.0.0-34.221.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 34.213.0.0-34.213.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 34.213.0.0-34.213.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.23.0.0-52.23.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.23.0.0-52.23.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.52.0.0-52.52.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.52.0.0-52.52.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.9.0.0-52.9.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.9.0.0-52.9.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.53.0.0-52.53.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.53.0.0-52.53.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.43.0.0-52.43.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.43.0.0-52.43.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 54.212.0.0-54.212.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 54.212.0.0-54.212.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 54.144.0.0-54.144.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 54.144.0.0-54.144.255.255 -j ACCEPT
-A INPUT -m iprange --src-range 52.39.0.0-52.39.255.255 -j ACCEPT
-A OUTPUT -m iprange --dst-range 52.39.0.0-52.39.255.255 -j ACCEPT
-A OUTPUT -d 137.117.83.38 -j ACCEPT
-A INPUT -s 137.117.83.38 -j ACCEPT 
#COMMIT
